--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The base URL of the site; the only required configuration variable.
-base_url = "https://deepthought-theme.netlify.app"
+base_url = "https://guitaricet.github.io/website"
 
 # The site title and description; used in feeds by default.
 title = "Vlad Lialin"
@@ -139,7 +139,7 @@ include_content = true
 # You can define language specific config values and translations: 
 # title, description, generate_feed, feed_filename, taxonomies, build_search_index
 # as well as its own search configuration and translations (see above for details on those)
-[languages]
+# [languages]
 # For example
 # [languages.fr]
 # title = "Mon blog"
