--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The base URL of the site; the only required configuration variable.
-base_url = "https://guitaricet.github.io/website"
+base_url = "https://vladlialin.com"
 
 # The site title and description; used in feeds by default.
 title = "Vlad Lialin"
