--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
 # The base URL of the site; the only required configuration variable.
-base_url = "https://vladlialin.com"
+base_url = "https://testingtest.com"
 
 # The site title and description; used in feeds by default.
-title = "Vlad Lialin"
-description = "Vlad Lialin personal website"
+title = "Test test"
+description = "Test test"
 
 # The default language; used in feeds.
 default_language = "en"
@@ -170,7 +170,7 @@ navbar_items = [
     { code = "en", nav_items = [
         { url = "$BASE_URL/", download=false, name = "Home" },
         { url = "$BASE_URL/publications", download=false, name = "Publications" },
-        { url = "https://storage.googleapis.com/vlialin-share/vladislav_lialin_cv.pdf", download=true, name="CV"},
+        { url = "", download=true, name="CV"},
     ] },
 ]
 
@@ -185,10 +185,8 @@ name = "DeepThought"
 avatar = "images/avatar.jpg"
 
 [extra.social]
-github = "guitaricet"
-linkedin = "vlialin"
-email = "vlad.lialin@gmail.com"
-twitter = "guitaricet"
-cv = "https://storage.googleapis.com/vlialin-share/vladislav_lialin_cv.pdf"
-google_scholar = "B1Ijov0AAAAJ"
-telegram = "dlinnlp"
+github = "ad"
+linkedin = "ad"
+twitter = "ad"
+google_scholar = "ad"
+telegram = "ads"
