--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ title = "Test test"
 description = "Test test"
 
 # The default language; used in feeds.
-default_language = "en"
+default_language = "ru"
 
 # The site theme to use.
 # theme = ""
